--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "currency.js": "^1.2.2",
     "gh-pages": "^2.2.0",
+    "js-base64": "^3.2.4",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
