--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^2.2.0",
     "js-base64": "^3.2.4",
     "lodash": "^4.17.15",
+    "magpie-js-sdk": "^1.0.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
